@@ -72,6 +72,10 @@ Other Changes and Additions
   was added for consistency with the ``.name`` attribute which returns the
   EXTNAME value from the header.
 
+- Then ``Column`` and ``ColDefs`` classes have new ``.dtype`` attributes
+  which give the Numpy dtype for the column data in the first case, and the
+  full Numpy compound dtype for each table row in the latter case.
+
 
 3.1.3 (unreleased)
 ------------------
